kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-service
                port:
                  number: 80
